# ndsl_raytracer

./: README.md  pyproject.toml
nraytracer/: cameras.py  canvas.py  colors.py  core.py  errors.py  hittables.py  hittables_lists.py  hittables_variants.py  materials.py  point3s.py  ppm.py  primitives.py  rays.py  render.py  rng.py  safe_math.py  sampling.py  scenes.py  spheres.py  timing.py  trace_of_radiance.py  vec3s.py
src/nraytracer/: color_conversions.py  colors.py  converter_ppm_to_mp4.py  errors.py  h264.py  hittables.py  hittables_lists.py  hittables_variants.py  materials.py  minimp4.py  moving_spheres.py  mp4.py  point3s.py  ppm.py  render.py  rng.py  sampling.py  scenes.py  scenes_animated.py  spheres.py  trace_of_radiance.py  trace_of_radiance_animation.py  vec3s.py
