[project]
name = "nraytracer"
version = "0.1.0"
authors = [{ name = "Dmytro Makogon"}]
description = "Pure Python raytracer written in nimic that transpiles to Nim"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.12"

dependencies = [
    "nimic>=0.0.4",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[project.urls] # Optional
"Source" = "https://github.com/dima-quant/ndsl_raytracer.git"